// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixture 'store' > query 'BasicWithFragmentDefinition' > should execute 1`] = `
{
  "data": {
    "storefront": {
      "id": "apple-store",
      "name": "Apple Store",
      "products": [
        {
          "manufacturer": {
            "id": "apple",
          },
          "upc": "iphone",
        },
        {
          "manufacturer": {
            "id": "apple",
          },
          "upc": "ipad",
        },
      ],
    },
  },
  "extensions": {
    "explain": [
      {
        "data": {
          "storefront": {
            "id": "apple-store",
            "name": "Apple Store",
            "products": [
              {
                "upc": "iphone",
              },
              {
                "upc": "ipad",
              },
            ],
          },
        },
        "includes": [
          {
            "data": {
              "product": {
                "manufacturer": {
                  "id": "apple",
                },
              },
            },
            "includes": [],
            "inlineVariables": {},
            "kind": "composite",
            "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  manufacturer {
    id
  }
}",
            "pathInData": [
              "storefront",
              "products",
              0,
            ],
            "pathToExportData": [
              "product",
            ],
            "private": [],
            "public": [
              "manufacturer.id",
            ],
            "source": "products",
            "type": "Product",
            "variables": {
              "Product_upc": "iphone",
            },
          },
          {
            "data": {
              "product": {
                "manufacturer": {
                  "id": "apple",
                },
              },
            },
            "includes": [],
            "inlineVariables": {},
            "kind": "composite",
            "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  manufacturer {
    id
  }
}",
            "pathInData": [
              "storefront",
              "products",
              1,
            ],
            "pathToExportData": [
              "product",
            ],
            "private": [],
            "public": [
              "manufacturer.id",
            ],
            "source": "products",
            "type": "Product",
            "variables": {
              "Product_upc": "ipad",
            },
          },
        ],
        "inlineVariables": {
          "id": "apple-store",
        },
        "kind": "composite",
        "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  id
  products {
    upc
  }
  name
}",
        "pathInData": [
          "storefront",
        ],
        "pathToExportData": [
          "storefront",
        ],
        "private": [],
        "public": [
          "id",
          "products.upc",
          "name",
        ],
        "source": "storefronts",
        "type": "Storefront",
        "variables": {
          "id": "apple-store",
        },
      },
    ],
  },
}
`;

exports[`fixture 'store' > query 'BasicWithFragmentDefinition' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "BasicWithFragmentDefinition",
      "resolvers": {
        "storefront": {
          "includes": {
            "products": {
              "includes": {},
              "inlineVariables": {},
              "kind": "composite",
              "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  manufacturer {
    id
  }
}",
              "pathToExportData": [
                "product",
              ],
              "private": [],
              "public": [
                "manufacturer.id",
              ],
              "source": "products",
              "type": "Product",
              "variables": {
                "Product_upc": {
                  "name": "Product_upc",
                  "select": "upc",
                },
              },
            },
          },
          "inlineVariables": {
            "id": "apple-store",
          },
          "kind": "composite",
          "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  id
  products {
    upc
  }
  name
}",
          "pathToExportData": [
            "storefront",
          ],
          "private": [],
          "public": [
            "id",
            "products.upc",
            "name",
          ],
          "source": "storefronts",
          "type": "Storefront",
          "variables": {},
        },
      },
      "type": "query",
    },
  ],
  "query": "query BasicWithFragmentDefinition {
  storefront(id: "apple-store") {
    id
    products {
      ...P
    }
    name
  }
}

fragment P on Product {
  upc
  manufacturer {
    id
  }
}",
}
`;

exports[`fixture 'store' > query 'BasicWithInlineFragment' > should execute 1`] = `
{
  "data": {
    "storefront": {
      "id": "samsung-store",
      "name": "Samsung",
      "products": [
        {
          "name": "Samsung TV",
          "upc": "tv",
        },
        {
          "name": "Samsung Fold",
          "upc": "fold",
        },
        {
          "name": "Samsung Galaxy",
          "upc": "galaxy",
        },
      ],
    },
  },
  "extensions": {
    "explain": [
      {
        "data": {
          "storefront": {
            "id": "samsung-store",
            "name": "Samsung",
            "products": [
              {
                "upc": "tv",
              },
              {
                "upc": "fold",
              },
              {
                "upc": "galaxy",
              },
            ],
          },
        },
        "includes": [
          {
            "data": {
              "product": {
                "name": "Samsung TV",
              },
            },
            "includes": [],
            "inlineVariables": {},
            "kind": "composite",
            "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
}",
            "pathInData": [
              "storefront",
              "products",
              0,
            ],
            "pathToExportData": [
              "product",
            ],
            "private": [],
            "public": [
              "name",
            ],
            "source": "products",
            "type": "Product",
            "variables": {
              "Product_upc": "tv",
            },
          },
          {
            "data": {
              "product": {
                "name": "Samsung Fold",
              },
            },
            "includes": [],
            "inlineVariables": {},
            "kind": "composite",
            "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
}",
            "pathInData": [
              "storefront",
              "products",
              1,
            ],
            "pathToExportData": [
              "product",
            ],
            "private": [],
            "public": [
              "name",
            ],
            "source": "products",
            "type": "Product",
            "variables": {
              "Product_upc": "fold",
            },
          },
          {
            "data": {
              "product": {
                "name": "Samsung Galaxy",
              },
            },
            "includes": [],
            "inlineVariables": {},
            "kind": "composite",
            "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
}",
            "pathInData": [
              "storefront",
              "products",
              2,
            ],
            "pathToExportData": [
              "product",
            ],
            "private": [],
            "public": [
              "name",
            ],
            "source": "products",
            "type": "Product",
            "variables": {
              "Product_upc": "galaxy",
            },
          },
        ],
        "inlineVariables": {
          "id": "samsung-store",
        },
        "kind": "composite",
        "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  id
  name
  products {
    upc
  }
}",
        "pathInData": [
          "storefront",
        ],
        "pathToExportData": [
          "storefront",
        ],
        "private": [],
        "public": [
          "id",
          "name",
          "products.upc",
        ],
        "source": "storefronts",
        "type": "Storefront",
        "variables": {
          "id": "samsung-store",
        },
      },
    ],
  },
}
`;

exports[`fixture 'store' > query 'BasicWithInlineFragment' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "NotBasicWithInlineVariables",
      "resolvers": {
        "storefront": {
          "includes": {
            "products": {
              "includes": {},
              "inlineVariables": {},
              "kind": "composite",
              "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
}",
              "pathToExportData": [
                "product",
              ],
              "private": [],
              "public": [
                "name",
              ],
              "source": "products",
              "type": "Product",
              "variables": {
                "Product_upc": {
                  "name": "Product_upc",
                  "select": "upc",
                },
              },
            },
          },
          "inlineVariables": {
            "id": "samsung-store",
          },
          "kind": "composite",
          "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  id
  name
  products {
    upc
  }
}",
          "pathToExportData": [
            "storefront",
          ],
          "private": [],
          "public": [
            "id",
            "name",
            "products.upc",
          ],
          "source": "storefronts",
          "type": "Storefront",
          "variables": {},
        },
      },
      "type": "query",
    },
  ],
  "query": "query NotBasicWithInlineVariables {
  storefront(id: "samsung-store") {
    id
    name
    products {
      ... on Product {
        upc
        name
      }
    }
  }
}",
}
`;

exports[`fixture 'store' > query 'ListOperationResolver' > should execute 1`] = `
{
  "data": {
    "productsByUpcs": [
      {
        "manufacturer": {
          "name": "Samsung",
          "products": [
            {
              "name": "Samsung TV",
              "upc": "tv",
            },
            {
              "name": "Samsung Fold",
              "upc": "fold",
            },
            {
              "name": "Samsung Galaxy",
              "upc": "galaxy",
            },
          ],
        },
        "name": "Samsung Galaxy",
        "upc": "galaxy",
      },
      {
        "manufacturer": {
          "name": "Apple",
          "products": [
            {
              "name": "Apple iPhone",
              "upc": "iphone",
            },
            {
              "name": "iPad",
              "upc": "ipad",
            },
          ],
        },
        "name": "Apple iPhone",
        "upc": "iphone",
      },
    ],
  },
  "extensions": {
    "explain": [
      {
        "data": {
          "productsByUpcs": [
            {
              "manufacturer": {
                "id": "samsung",
                "products": [
                  {
                    "name": "Samsung TV",
                    "upc": "tv",
                  },
                  {
                    "name": "Samsung Fold",
                    "upc": "fold",
                  },
                  {
                    "name": "Samsung Galaxy",
                    "upc": "galaxy",
                  },
                ],
              },
              "name": "Samsung Galaxy",
              "upc": "galaxy",
            },
            {
              "manufacturer": {
                "id": "apple",
                "products": [
                  {
                    "name": "Apple iPhone",
                    "upc": "iphone",
                  },
                  {
                    "name": "iPad",
                    "upc": "ipad",
                  },
                ],
              },
              "name": "Apple iPhone",
              "upc": "iphone",
            },
          ],
        },
        "includes": [
          {
            "data": {
              "manufacturer": {
                "name": "Samsung",
              },
            },
            "includes": [],
            "inlineVariables": {},
            "kind": "composite",
            "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
            "pathInData": [
              "productsByUpcs",
              0,
              "manufacturer",
            ],
            "pathToExportData": [
              "manufacturer",
            ],
            "private": [],
            "public": [
              "name",
            ],
            "source": "manufacturers",
            "type": "Manufacturer",
            "variables": {
              "Manufacturer_id": "samsung",
            },
          },
          {
            "data": {
              "manufacturer": {
                "name": "Apple",
              },
            },
            "includes": [],
            "inlineVariables": {},
            "kind": "composite",
            "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
            "pathInData": [
              "productsByUpcs",
              1,
              "manufacturer",
            ],
            "pathToExportData": [
              "manufacturer",
            ],
            "private": [],
            "public": [
              "name",
            ],
            "source": "manufacturers",
            "type": "Manufacturer",
            "variables": {
              "Manufacturer_id": "apple",
            },
          },
        ],
        "inlineVariables": {
          "upcs": [
            "galaxy",
            "iphone",
          ],
        },
        "kind": "composite",
        "operation": "query productsByUpcs($upcs: [ID!]!) {
  productsByUpcs(upcs: $upcs) {
    ...__export
  }
}

fragment __export on Product {
  upc
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
        "pathInData": [
          "productsByUpcs",
        ],
        "pathToExportData": [
          "productsByUpcs",
        ],
        "private": [
          "manufacturer.id",
        ],
        "public": [
          "upc",
          "name",
          "manufacturer.products.upc",
          "manufacturer.products.name",
        ],
        "source": "products",
        "type": "Product",
        "variables": {
          "id": "apple-store",
          "upcs": [
            "galaxy",
            "iphone",
          ],
        },
      },
    ],
  },
}
`;

exports[`fixture 'store' > query 'ListOperationResolver' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "ListOperationResolver",
      "resolvers": {
        "productsByUpcs": {
          "includes": {
            "manufacturer": {
              "includes": {},
              "inlineVariables": {},
              "kind": "composite",
              "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
              "pathToExportData": [
                "manufacturer",
              ],
              "private": [],
              "public": [
                "name",
              ],
              "source": "manufacturers",
              "type": "Manufacturer",
              "variables": {
                "Manufacturer_id": {
                  "name": "Manufacturer_id",
                  "select": "id",
                },
              },
            },
          },
          "inlineVariables": {
            "upcs": [
              "galaxy",
              "iphone",
            ],
          },
          "kind": "composite",
          "operation": "query productsByUpcs($upcs: [ID!]!) {
  productsByUpcs(upcs: $upcs) {
    ...__export
  }
}

fragment __export on Product {
  upc
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
          "pathToExportData": [
            "productsByUpcs",
          ],
          "private": [
            "manufacturer.id",
          ],
          "public": [
            "upc",
            "name",
            "manufacturer.products.upc",
            "manufacturer.products.name",
          ],
          "source": "products",
          "type": "Product",
          "variables": {},
        },
      },
      "type": "query",
    },
  ],
  "query": "query ListOperationResolver {
  productsByUpcs(upcs: ["galaxy", "iphone"]) {
    upc
    name
    manufacturer {
      products {
        upc
        name
      }
      name
    }
  }
}",
}
`;

exports[`fixture 'store' > query 'NotBasicWithInlineVariables' > should execute 1`] = `
{
  "data": {
    "storefront": {
      "id": "samsung-store",
      "name": "Samsung",
      "products": [
        {
          "manufacturer": {
            "name": "Samsung",
            "products": [
              {
                "name": "Samsung TV",
                "upc": "tv",
              },
              {
                "name": "Samsung Fold",
                "upc": "fold",
              },
              {
                "name": "Samsung Galaxy",
                "upc": "galaxy",
              },
            ],
          },
          "name": "Samsung TV",
          "upc": "tv",
        },
        {
          "manufacturer": {
            "name": "Samsung",
            "products": [
              {
                "name": "Samsung TV",
                "upc": "tv",
              },
              {
                "name": "Samsung Fold",
                "upc": "fold",
              },
              {
                "name": "Samsung Galaxy",
                "upc": "galaxy",
              },
            ],
          },
          "name": "Samsung Fold",
          "upc": "fold",
        },
        {
          "manufacturer": {
            "name": "Samsung",
            "products": [
              {
                "name": "Samsung TV",
                "upc": "tv",
              },
              {
                "name": "Samsung Fold",
                "upc": "fold",
              },
              {
                "name": "Samsung Galaxy",
                "upc": "galaxy",
              },
            ],
          },
          "name": "Samsung Galaxy",
          "upc": "galaxy",
        },
      ],
    },
  },
  "extensions": {
    "explain": [
      {
        "data": {
          "storefront": {
            "id": "samsung-store",
            "name": "Samsung",
            "products": [
              {
                "upc": "tv",
              },
              {
                "upc": "fold",
              },
              {
                "upc": "galaxy",
              },
            ],
          },
        },
        "includes": [
          {
            "data": {
              "product": {
                "manufacturer": {
                  "id": "samsung",
                  "products": [
                    {
                      "name": "Samsung TV",
                      "upc": "tv",
                    },
                    {
                      "name": "Samsung Fold",
                      "upc": "fold",
                    },
                    {
                      "name": "Samsung Galaxy",
                      "upc": "galaxy",
                    },
                  ],
                },
                "name": "Samsung TV",
              },
            },
            "includes": [
              {
                "data": {
                  "manufacturer": {
                    "name": "Samsung",
                  },
                },
                "includes": [],
                "inlineVariables": {},
                "kind": "composite",
                "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
                "pathInData": [
                  "storefront",
                  "products",
                  0,
                  "manufacturer",
                ],
                "pathToExportData": [
                  "manufacturer",
                ],
                "private": [],
                "public": [
                  "name",
                ],
                "source": "manufacturers",
                "type": "Manufacturer",
                "variables": {
                  "Manufacturer_id": "samsung",
                },
              },
            ],
            "inlineVariables": {},
            "kind": "composite",
            "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
            "pathInData": [
              "storefront",
              "products",
              0,
            ],
            "pathToExportData": [
              "product",
            ],
            "private": [
              "manufacturer.id",
            ],
            "public": [
              "name",
              "manufacturer.products.upc",
              "manufacturer.products.name",
            ],
            "source": "products",
            "type": "Product",
            "variables": {
              "Product_upc": "tv",
            },
          },
          {
            "data": {
              "product": {
                "manufacturer": {
                  "id": "samsung",
                  "products": [
                    {
                      "name": "Samsung TV",
                      "upc": "tv",
                    },
                    {
                      "name": "Samsung Fold",
                      "upc": "fold",
                    },
                    {
                      "name": "Samsung Galaxy",
                      "upc": "galaxy",
                    },
                  ],
                },
                "name": "Samsung Fold",
              },
            },
            "includes": [
              {
                "data": {
                  "manufacturer": {
                    "name": "Samsung",
                  },
                },
                "includes": [],
                "inlineVariables": {},
                "kind": "composite",
                "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
                "pathInData": [
                  "storefront",
                  "products",
                  1,
                  "manufacturer",
                ],
                "pathToExportData": [
                  "manufacturer",
                ],
                "private": [],
                "public": [
                  "name",
                ],
                "source": "manufacturers",
                "type": "Manufacturer",
                "variables": {
                  "Manufacturer_id": "samsung",
                },
              },
            ],
            "inlineVariables": {},
            "kind": "composite",
            "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
            "pathInData": [
              "storefront",
              "products",
              1,
            ],
            "pathToExportData": [
              "product",
            ],
            "private": [
              "manufacturer.id",
            ],
            "public": [
              "name",
              "manufacturer.products.upc",
              "manufacturer.products.name",
            ],
            "source": "products",
            "type": "Product",
            "variables": {
              "Product_upc": "fold",
            },
          },
          {
            "data": {
              "product": {
                "manufacturer": {
                  "id": "samsung",
                  "products": [
                    {
                      "name": "Samsung TV",
                      "upc": "tv",
                    },
                    {
                      "name": "Samsung Fold",
                      "upc": "fold",
                    },
                    {
                      "name": "Samsung Galaxy",
                      "upc": "galaxy",
                    },
                  ],
                },
                "name": "Samsung Galaxy",
              },
            },
            "includes": [
              {
                "data": {
                  "manufacturer": {
                    "name": "Samsung",
                  },
                },
                "includes": [],
                "inlineVariables": {},
                "kind": "composite",
                "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
                "pathInData": [
                  "storefront",
                  "products",
                  2,
                  "manufacturer",
                ],
                "pathToExportData": [
                  "manufacturer",
                ],
                "private": [],
                "public": [
                  "name",
                ],
                "source": "manufacturers",
                "type": "Manufacturer",
                "variables": {
                  "Manufacturer_id": "samsung",
                },
              },
            ],
            "inlineVariables": {},
            "kind": "composite",
            "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
            "pathInData": [
              "storefront",
              "products",
              2,
            ],
            "pathToExportData": [
              "product",
            ],
            "private": [
              "manufacturer.id",
            ],
            "public": [
              "name",
              "manufacturer.products.upc",
              "manufacturer.products.name",
            ],
            "source": "products",
            "type": "Product",
            "variables": {
              "Product_upc": "galaxy",
            },
          },
        ],
        "inlineVariables": {
          "id": "samsung-store",
        },
        "kind": "composite",
        "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  id
  name
  products {
    upc
  }
}",
        "pathInData": [
          "storefront",
        ],
        "pathToExportData": [
          "storefront",
        ],
        "private": [],
        "public": [
          "id",
          "name",
          "products.upc",
        ],
        "source": "storefronts",
        "type": "Storefront",
        "variables": {
          "id": "samsung-store",
        },
      },
    ],
  },
}
`;

exports[`fixture 'store' > query 'NotBasicWithInlineVariables' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "NotBasicWithInlineVariables",
      "resolvers": {
        "storefront": {
          "includes": {
            "products": {
              "includes": {
                "manufacturer": {
                  "includes": {},
                  "inlineVariables": {},
                  "kind": "composite",
                  "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
                  "pathToExportData": [
                    "manufacturer",
                  ],
                  "private": [],
                  "public": [
                    "name",
                  ],
                  "source": "manufacturers",
                  "type": "Manufacturer",
                  "variables": {
                    "Manufacturer_id": {
                      "name": "Manufacturer_id",
                      "select": "id",
                    },
                  },
                },
              },
              "inlineVariables": {},
              "kind": "composite",
              "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
              "pathToExportData": [
                "product",
              ],
              "private": [
                "manufacturer.id",
              ],
              "public": [
                "name",
                "manufacturer.products.upc",
                "manufacturer.products.name",
              ],
              "source": "products",
              "type": "Product",
              "variables": {
                "Product_upc": {
                  "name": "Product_upc",
                  "select": "upc",
                },
              },
            },
          },
          "inlineVariables": {
            "id": "samsung-store",
          },
          "kind": "composite",
          "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  id
  name
  products {
    upc
  }
}",
          "pathToExportData": [
            "storefront",
          ],
          "private": [],
          "public": [
            "id",
            "name",
            "products.upc",
          ],
          "source": "storefronts",
          "type": "Storefront",
          "variables": {},
        },
      },
      "type": "query",
    },
  ],
  "query": "query NotBasicWithInlineVariables {
  storefront(id: "samsung-store") {
    id
    name
    products {
      upc
      name
      manufacturer {
        products {
          upc
          name
        }
        name
      }
    }
  }
}",
}
`;

exports[`fixture 'store' > query 'NotBasicWithOperationVariables' > should execute 1`] = `
{
  "data": {
    "storefront": {
      "id": "apple-store",
      "name": "Apple Store",
      "products": [
        {
          "manufacturer": {
            "name": "Apple",
            "products": [
              {
                "name": "Apple iPhone",
                "upc": "iphone",
              },
              {
                "name": "iPad",
                "upc": "ipad",
              },
            ],
          },
          "name": "Apple iPhone",
          "upc": "iphone",
        },
        {
          "manufacturer": {
            "name": "Apple",
            "products": [
              {
                "name": "Apple iPhone",
                "upc": "iphone",
              },
              {
                "name": "iPad",
                "upc": "ipad",
              },
            ],
          },
          "name": "iPad",
          "upc": "ipad",
        },
      ],
    },
  },
  "extensions": {
    "explain": [
      {
        "data": {
          "storefront": {
            "id": "apple-store",
            "name": "Apple Store",
            "products": [
              {
                "upc": "iphone",
              },
              {
                "upc": "ipad",
              },
            ],
          },
        },
        "includes": [
          {
            "data": {
              "product": {
                "manufacturer": {
                  "id": "apple",
                  "products": [
                    {
                      "name": "Apple iPhone",
                      "upc": "iphone",
                    },
                    {
                      "name": "iPad",
                      "upc": "ipad",
                    },
                  ],
                },
                "name": "Apple iPhone",
              },
            },
            "includes": [
              {
                "data": {
                  "manufacturer": {
                    "name": "Apple",
                  },
                },
                "includes": [],
                "inlineVariables": {},
                "kind": "composite",
                "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
                "pathInData": [
                  "storefront",
                  "products",
                  0,
                  "manufacturer",
                ],
                "pathToExportData": [
                  "manufacturer",
                ],
                "private": [],
                "public": [
                  "name",
                ],
                "source": "manufacturers",
                "type": "Manufacturer",
                "variables": {
                  "Manufacturer_id": "apple",
                },
              },
            ],
            "inlineVariables": {},
            "kind": "composite",
            "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
            "pathInData": [
              "storefront",
              "products",
              0,
            ],
            "pathToExportData": [
              "product",
            ],
            "private": [
              "manufacturer.id",
            ],
            "public": [
              "name",
              "manufacturer.products.upc",
              "manufacturer.products.name",
            ],
            "source": "products",
            "type": "Product",
            "variables": {
              "Product_upc": "iphone",
            },
          },
          {
            "data": {
              "product": {
                "manufacturer": {
                  "id": "apple",
                  "products": [
                    {
                      "name": "Apple iPhone",
                      "upc": "iphone",
                    },
                    {
                      "name": "iPad",
                      "upc": "ipad",
                    },
                  ],
                },
                "name": "iPad",
              },
            },
            "includes": [
              {
                "data": {
                  "manufacturer": {
                    "name": "Apple",
                  },
                },
                "includes": [],
                "inlineVariables": {},
                "kind": "composite",
                "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
                "pathInData": [
                  "storefront",
                  "products",
                  1,
                  "manufacturer",
                ],
                "pathToExportData": [
                  "manufacturer",
                ],
                "private": [],
                "public": [
                  "name",
                ],
                "source": "manufacturers",
                "type": "Manufacturer",
                "variables": {
                  "Manufacturer_id": "apple",
                },
              },
            ],
            "inlineVariables": {},
            "kind": "composite",
            "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
            "pathInData": [
              "storefront",
              "products",
              1,
            ],
            "pathToExportData": [
              "product",
            ],
            "private": [
              "manufacturer.id",
            ],
            "public": [
              "name",
              "manufacturer.products.upc",
              "manufacturer.products.name",
            ],
            "source": "products",
            "type": "Product",
            "variables": {
              "Product_upc": "ipad",
            },
          },
        ],
        "inlineVariables": {},
        "kind": "composite",
        "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  id
  name
  products {
    upc
  }
}",
        "pathInData": [
          "storefront",
        ],
        "pathToExportData": [
          "storefront",
        ],
        "private": [],
        "public": [
          "id",
          "name",
          "products.upc",
        ],
        "source": "storefronts",
        "type": "Storefront",
        "variables": {
          "id": "apple-store",
        },
      },
    ],
  },
}
`;

exports[`fixture 'store' > query 'NotBasicWithOperationVariables' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "NotBasicWithOperationVariables",
      "resolvers": {
        "storefront": {
          "includes": {
            "products": {
              "includes": {
                "manufacturer": {
                  "includes": {},
                  "inlineVariables": {},
                  "kind": "composite",
                  "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  name
}",
                  "pathToExportData": [
                    "manufacturer",
                  ],
                  "private": [],
                  "public": [
                    "name",
                  ],
                  "source": "manufacturers",
                  "type": "Manufacturer",
                  "variables": {
                    "Manufacturer_id": {
                      "name": "Manufacturer_id",
                      "select": "id",
                    },
                  },
                },
              },
              "inlineVariables": {},
              "kind": "composite",
              "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
              "pathToExportData": [
                "product",
              ],
              "private": [
                "manufacturer.id",
              ],
              "public": [
                "name",
                "manufacturer.products.upc",
                "manufacturer.products.name",
              ],
              "source": "products",
              "type": "Product",
              "variables": {
                "Product_upc": {
                  "name": "Product_upc",
                  "select": "upc",
                },
              },
            },
          },
          "inlineVariables": {},
          "kind": "composite",
          "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  id
  name
  products {
    upc
  }
}",
          "pathToExportData": [
            "storefront",
          ],
          "private": [],
          "public": [
            "id",
            "name",
            "products.upc",
          ],
          "source": "storefronts",
          "type": "Storefront",
          "variables": {},
        },
      },
      "type": "query",
    },
  ],
  "query": "query NotBasicWithOperationVariables($id: ID!) {
  storefront(id: $id) {
    id
    name
    products {
      upc
      name
      manufacturer {
        products {
          upc
          name
        }
        name
      }
    }
  }
}",
}
`;

exports[`fixture 'store' > query 'ScalarOperationField' > should execute 1`] = `
{
  "data": {
    "manufacturerName": "Samsung",
  },
  "extensions": {
    "explain": [
      {
        "data": {
          "manufacturerName": "Samsung",
        },
        "inlineVariables": {
          "id": "samsung",
        },
        "kind": "scalar",
        "operation": "query manufacturerName($id: ID!) {
  manufacturerName(id: $id)
}",
        "pathInData": [
          "manufacturerName",
        ],
        "pathToExportData": [
          "manufacturerName",
        ],
        "source": "manufacturers",
        "type": "String",
        "variables": {
          "id": "samsung",
        },
      },
    ],
  },
}
`;

exports[`fixture 'store' > query 'ScalarOperationField' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "ScalarOperationField",
      "resolvers": {
        "manufacturerName": {
          "inlineVariables": {
            "id": "samsung",
          },
          "kind": "scalar",
          "operation": "query manufacturerName($id: ID!) {
  manufacturerName(id: $id)
}",
          "pathToExportData": [
            "manufacturerName",
          ],
          "source": "manufacturers",
          "type": "String",
          "variables": {},
        },
      },
      "type": "query",
    },
  ],
  "query": "query ScalarOperationField {
  manufacturerName(id: "samsung")
}",
}
`;

exports[`fixture 'store' > query 'ScalarOperationFieldNested' > should execute 1`] = `
{
  "data": {
    "productName": "iPad",
  },
  "extensions": {
    "explain": [
      {
        "data": {
          "product": {
            "name": "iPad",
          },
        },
        "inlineVariables": {
          "upc": "ipad",
        },
        "kind": "scalar",
        "operation": "query productName($upc: ID!) {
  product(upc: $upc) {
    name
  }
}",
        "pathInData": [
          "productName",
        ],
        "pathToExportData": [
          "product",
          "name",
        ],
        "source": "products",
        "type": "String",
        "variables": {
          "upc": "ipad",
        },
      },
    ],
  },
}
`;

exports[`fixture 'store' > query 'ScalarOperationFieldNested' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "ScalarOperationFieldNested",
      "resolvers": {
        "productName": {
          "inlineVariables": {
            "upc": "ipad",
          },
          "kind": "scalar",
          "operation": "query productName($upc: ID!) {
  product(upc: $upc) {
    name
  }
}",
          "pathToExportData": [
            "product",
            "name",
          ],
          "source": "products",
          "type": "String",
          "variables": {},
        },
      },
      "type": "query",
    },
  ],
  "query": "query ScalarOperationFieldNested {
  productName(upc: "ipad")
}",
}
`;

exports[`fixture 'store' > should plan schema 1`] = `
{
  "compositeTypes": {
    "Manufacturer": {
      "fields": {
        "id": {
          "name": "id",
          "sources": {
            "manufacturers": {
              "source": "manufacturers",
            },
            "products": {
              "source": "products",
            },
          },
        },
        "name": {
          "name": "name",
          "sources": {
            "manufacturers": {
              "source": "manufacturers",
            },
          },
        },
        "products": {
          "name": "products",
          "sources": {
            "products": {
              "source": "products",
            },
          },
        },
      },
      "name": "Manufacturer",
      "resolvers": {
        "manufacturers": {
          "kind": "composite",
          "operation": "query ManufacturerById($Manufacturer_id: ID!) { manufacturer(id: $Manufacturer_id) { ...__export } }",
          "source": "manufacturers",
          "type": "Manufacturer",
          "variables": {
            "Manufacturer_id": {
              "name": "Manufacturer_id",
              "select": "id",
            },
          },
        },
        "products": {
          "kind": "composite",
          "operation": "query ManufacturerById($Manufacturer_id: ID!) { _manufacturer(id: $Manufacturer_id) { ...__export } }",
          "source": "products",
          "type": "Manufacturer",
          "variables": {
            "Manufacturer_id": {
              "name": "Manufacturer_id",
              "select": "id",
            },
          },
        },
      },
    },
    "Product": {
      "fields": {
        "manufacturer": {
          "name": "manufacturer",
          "sources": {
            "products": {
              "source": "products",
            },
          },
        },
        "name": {
          "name": "name",
          "sources": {
            "products": {
              "source": "products",
            },
          },
        },
        "price": {
          "name": "price",
          "sources": {
            "products": {
              "source": "products",
            },
          },
        },
        "upc": {
          "name": "upc",
          "sources": {
            "products": {
              "source": "products",
            },
            "storefronts": {
              "source": "storefronts",
            },
          },
        },
      },
      "name": "Product",
      "resolvers": {
        "products": {
          "kind": "composite",
          "operation": "query ProductByUpc($Product_upc: ID!) { product(upc: $Product_upc) { ...__export } }",
          "source": "products",
          "type": "Product",
          "variables": {
            "Product_upc": {
              "name": "Product_upc",
              "select": "upc",
            },
          },
        },
        "storefronts": {
          "kind": "composite",
          "operation": "query ProductByUpc($Product_upc: ID!) { product(upc: $Product_upc) { ...__export } }",
          "source": "storefronts",
          "type": "Product",
          "variables": {
            "Product_upc": {
              "name": "Product_upc",
              "select": "upc",
            },
          },
        },
      },
    },
    "Storefront": {
      "fields": {
        "id": {
          "name": "id",
          "sources": {
            "storefronts": {
              "source": "storefronts",
            },
          },
        },
        "name": {
          "name": "name",
          "sources": {
            "storefronts": {
              "source": "storefronts",
            },
          },
        },
        "products": {
          "name": "products",
          "sources": {
            "storefronts": {
              "source": "storefronts",
            },
          },
        },
      },
      "name": "Storefront",
      "resolvers": {
        "storefronts": {
          "kind": "composite",
          "operation": "query StorefrontById($Storefront_id: ID!) { storefront(id: $Storefront_id) { ...__export } }",
          "source": "storefronts",
          "type": "Storefront",
          "variables": {
            "Storefront_id": {
              "name": "Storefront_id",
              "select": "id",
            },
          },
        },
      },
    },
  },
  "operations": {
    "query": {
      "fields": {
        "manufacturer": {
          "name": "manufacturer",
          "resolvers": {
            "manufacturers": {
              "kind": "composite",
              "operation": "query manufacturer($id: ID!) { manufacturer(id: $id) { ...__export } }",
              "source": "manufacturers",
              "type": "Manufacturer",
              "variables": {},
            },
          },
        },
        "manufacturerName": {
          "name": "manufacturerName",
          "resolvers": {
            "manufacturers": {
              "kind": "scalar",
              "operation": "query manufacturerName($id: ID!) { manufacturerName(id: $id) }",
              "source": "manufacturers",
              "type": "String",
              "variables": {},
            },
          },
        },
        "product": {
          "name": "product",
          "resolvers": {
            "products": {
              "kind": "composite",
              "operation": "query product($upc: ID!) { product(upc: $upc) { ...__export } }",
              "source": "products",
              "type": "Product",
              "variables": {},
            },
          },
        },
        "productName": {
          "name": "productName",
          "resolvers": {
            "products": {
              "kind": "scalar",
              "operation": "query productName($upc: ID!) { product(upc: $upc) { name } }",
              "source": "products",
              "type": "String",
              "variables": {},
            },
          },
        },
        "productsByUpcs": {
          "name": "productsByUpcs",
          "resolvers": {
            "products": {
              "kind": "composite",
              "operation": "query productsByUpcs($upcs: [ID!]!) { productsByUpcs(upcs: $upcs) { ...__export } }",
              "source": "products",
              "type": "Product",
              "variables": {},
            },
          },
        },
        "storefront": {
          "name": "storefront",
          "resolvers": {
            "storefronts": {
              "kind": "composite",
              "operation": "query storefront($id: ID!) { storefront(id: $id) { ...__export } }",
              "source": "storefronts",
              "type": "Storefront",
              "variables": {},
            },
          },
        },
      },
      "name": "query",
    },
  },
  "schema": "type Manufacturer {
  id: ID!
  name: String!
  products: [Product]!
}

type Query {
  manufacturer(id: ID!): Manufacturer
  manufacturerName(id: ID!): String
  product(upc: ID!): Product
  productsByUpcs(upcs: [ID!]!): [Product]!
  productName(upc: ID!): String
  storefront(id: ID!): Storefront
}

type Product {
  manufacturer: Manufacturer
  name: String!
  price: Float!
  upc: ID!
}

type Storefront {
  id: ID!
  name: String!
  products: [Product]!
}",
}
`;

exports[`should build proper operation and find export path for 'FindDeepestPath' resolver 1`] = `
{
  "operation": "query FindDeepestPath {
  manufacturer {
    nested {
      deep
    }
  }
}",
  "pathToExportData": [
    "manufacturer",
    "nested",
    "deep",
  ],
}
`;

exports[`should build proper operation and find export path for 'ManufacturerById' resolver 1`] = `
{
  "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    ...__export
  }
}

fragment __export on Manufacturer {
  id
  name
}",
  "pathToExportData": [
    "manufacturer",
  ],
}
`;

exports[`should build proper operation and find export path for 'ManufacturerNested' resolver 1`] = `
{
  "operation": "query ManufacturerNested {
  manufacturer {
    nested {
      deep {
        ...__export
      }
    }
  }
}

fragment __export on Manufacturer {
  id
  name
  products {
    manufacturer {
      location
    }
    name
  }
}",
  "pathToExportData": [
    "manufacturer",
    "nested",
    "deep",
  ],
}
`;

exports[`should build proper operation and find export path for 'ProductByUpc' resolver 1`] = `
{
  "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    ...__export
  }
}

fragment __export on Product {
  name
  manufacturer {
    products {
      upc
      name
    }
    id
  }
}",
  "pathToExportData": [
    "product",
  ],
}
`;

exports[`should build proper operation and find export path for 'storefront' resolver 1`] = `
{
  "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    ...__export
  }
}

fragment __export on Storefront {
  id
  name
  products {
    upc
  }
}",
  "pathToExportData": [
    "storefront",
  ],
}
`;
